css fixing not responsive

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .main {
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 .App-header {
